--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -458,5 +458,178 @@ body {
         }
       }
     }
+    .quickbook {
+      width: 389px;
+      height: 2175px;
+      position: absolute;
+      // border: 2px solid black;
+
+      left: 1291px;
+      .container {
+        border: 2px solid black;
+        width: 341px;
+        height: 2118.6328125px;
+        position: relative;
+        top: 22px;
+        left: 24px;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        .one {
+          width: 341px;
+          height: 134px;
+          border-width: 1px;
+          border: 1px solid #ececf2;
+          .title {
+            width: 205px;
+            height: 62px;
+            position: relative;
+            top: 16px;
+            left: 16px;
+            gap: 8px;
+            display: flex;
+            img {
+              width: 40px;
+              height: 40px;
+            }
+            .block {
+              display: flex;
+              flex-direction: column;
+              justify-content: start;
+              .block1 {
+                color: #1c1d21;
+                width: 80px;
+                height: 24px;
+                font-family: Hanken Grotesk;
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 150%;
+                letter-spacing: 0px;
+                text-align: center;
+              }
+              .block2 {
+                display: flex;
+                flex-direction: column;
+                font-family: Hanken Grotesk;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 150%;
+                letter-spacing: 0px;
+                text-align: center;
+                color: #8181a5;
+                align-items: start;
+              }
+            }
+          }
+          .status-div {
+            color: #8181a5;
+
+            .status {
+              width: 64;
+              height: 18;
+              position: absolute;
+              top: 16px;
+              left: 261px;
+              font-family: Hanken Grotesk;
+              font-weight: 700;
+              font-size: 12px;
+              line-height: 150%;
+              letter-spacing: 0px;
+              text-align: right;
+            }
+            .author {
+              width: 72;
+              height: 18;
+              position: absolute;
+              top: 42px;
+              left: 253px;
+              font-family: Hanken Grotesk;
+              font-weight: 700;
+              font-size: 12px;
+              line-height: 150%;
+              letter-spacing: 0px;
+              text-align: right;
+            }
+          }
+          .checks {
+            width: 309px;
+            height: 24px;
+            position: absolute;
+            top: 94px;
+            left: 16px;
+            gap: 18px;
+            display: flex;
+            .sync {
+              width: 145.5px;
+              height: 24px;
+              display: flex;
+              gap: 8px;
+              font-family: Hanken Grotesk;
+              font-weight: 500;
+              font-size: 16px;
+              line-height: 150%;
+              letter-spacing: 0px;
+            }
+            .save {
+              width: 145.5px;
+              height: 24px;
+              display: flex;
+              gap: 8px;
+              font-family: Hanken Grotesk;
+              font-weight: 500;
+              font-size: 16px;
+              line-height: 150%;
+              letter-spacing: 0px;
+            }
+          }
+        }
+        .two {
+          width: 341px;
+          height: 250px;
+          gap: 12px;
+          border: 2px solid black;
+        }
+        .three {
+          border: 2px solid black;
+          width: 341px;
+          height: 46px;
+          box-sizing: border-box;
+          gap: 10px;
+          border-radius: 8px;
+          padding-top: 12px;
+          padding-right: 24px;
+          padding-bottom: 12px;
+          padding-left: 24px;
+        }
+        .four {
+          border: 2px solid black;
+          width: 341px;
+          height: 56px;
+        }
+        .five {
+          border: 2px solid black;
+          width: 341px;
+          height: 1078px;
+          gap: 24px;
+        }
+        .six {
+          border: 2px solid black;
+          width: 341px;
+          height: 226px;
+          gap: 24px;
+        }
+        .seven {
+          width: 341px;
+          height: 56px;
+          border: 2px solid black;
+        }
+        .eight {
+          border: 2px solid black;
+          width: 341px;
+          height: 104px;
+          gap: 12px;
+        }
+      }
+    }
   }
 }
