--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -148,6 +148,7 @@ body .layout .navigation .section-2 {
 }
 body .layout .navigation .section-2 .search {
   cursor: pointer;
+  border: none;
   width: 48px;
   height: 48px;
   border-radius: 8px;
@@ -225,7 +226,6 @@ body .layout .navigation .section-2 .connect-div {
   display: flex;
   justify-content: center;
   border: none;
-  background: rgba(96, 58, 229, 0.1019607843);
 }
 body .layout .navigation .section-2 .connect-div .connect {
   width: 73px;
@@ -240,15 +240,8 @@ body .layout .navigation .section-2 .connect-div .connect {
   border: none;
   box-shadow: none;
   color: #603ae5;
-}
-body .layout .navigation .section-2 .connect-div .connect .option {
-  font-family: Hanken Grotesk;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 18px;
-  letter-spacing: 0px;
-  text-align: center;
-  background: rgba(96, 58, 229, 0.1019607843);
+  min-width: -moz-fit-content;
+  min-width: fit-content;
 }
 body .layout .navigation .section-2 .notifications {
   cursor: pointer;
@@ -293,6 +286,7 @@ body .layout .navigation .section-2 .settings img {
 }
 body .layout .navigation .section-2 .account {
   border: none;
+  cursor: pointer;
   width: 48px;
   height: 48px;
   display: flex;
@@ -355,8 +349,8 @@ body .layout main .accounting section .documents .links {
 }
 body .layout main .accounting section .documents .links .link {
   text-decoration: none;
-  width: 112;
-  height: 40;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
   gap: 10px;
   border-radius: 8px;
   padding-top: 12px;
@@ -372,6 +366,7 @@ body .layout main .accounting section .documents .links .link {
 }
 body .layout main .accounting section .documents .links .active {
   color: black;
+  border: 0.89px solid #ececf2;
 }
 body .layout main .accounting section .documents .outlet .bills {
   margin-top: 23px;
@@ -423,6 +418,38 @@ body .layout main .accounting section .documents .outlet .bills .bill .data .mon
   line-height: 18px;
   letter-spacing: 0px;
 }
+body .layout main .accounting section .documents .outlet .all {
+  margin-top: 23px;
+  width: 350px;
+  height: 712px;
+  text-align: center;
+  font-family: Hanken Grotesk;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0px;
+  color: #8181a5;
+}
+body .layout main .accounting section .documents .outlet .all img {
+  height: 300px;
+  width: 300px;
+}
+body .layout main .accounting section .documents .outlet .receipts {
+  margin-top: 23px;
+  width: 350px;
+  height: 712px;
+  text-align: center;
+  font-family: Hanken Grotesk;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0px;
+  color: #8181a5;
+}
+body .layout main .accounting section .documents .outlet .receipts img {
+  height: 300px;
+  width: 300px;
+}
 body .layout main .accounting section .document {
   width: 749px;
   height: 884px;
@@ -440,13 +467,13 @@ body .layout main .accounting section .document img {
   border-radius: 20px;
 }
 body .layout .quickbook {
+  background-color: white;
   width: 389px;
   height: 2175px;
   position: absolute;
   left: 1291px;
 }
 body .layout .quickbook .container {
-  border: 2px solid black;
   width: 341px;
   height: 2118.6328125px;
   position: relative;
@@ -465,7 +492,7 @@ body .layout .quickbook .container .one {
 body .layout .quickbook .container .one .title {
   width: 205px;
   height: 62px;
-  position: relative;
+  position: absolute;
   top: 16px;
   left: 16px;
   gap: 8px;
@@ -507,8 +534,8 @@ body .layout .quickbook .container .one .status-div {
   color: #8181a5;
 }
 body .layout .quickbook .container .one .status-div .status {
-  width: 64;
-  height: 18;
+  width: 64px;
+  height: 18px;
   position: absolute;
   top: 16px;
   left: 261px;
@@ -591,14 +618,14 @@ body .layout .quickbook .container .two .links .btn {
   letter-spacing: 0px;
   text-align: center;
   background-color: #f5f5fa;
+  background-color: white;
 }
 body .layout .quickbook .container .two .links .active {
   color: black;
-  width: 170;
-  height: 35.7840614319;
+  width: 170px;
+  height: 35.7840614319px;
   border-radius: 7.16px;
-  border-width: 0.89px;
-  border: 1px thin black;
+  border: 0.89px solid #ececf2;
 }
 body .layout .quickbook .container .two .block2 {
   width: 341px;
@@ -625,7 +652,7 @@ body .layout .quickbook .container .two .block2 div .title {
   color: #8181a5;
 }
 body .layout .quickbook .container .two .block2 div .input {
-  height: 21px;
+  height: 94px;
   flex: 1;
   min-width: -moz-fit-content;
   min-width: fit-content;
@@ -646,6 +673,9 @@ body .layout .quickbook .container .two .block3 {
   justify-content: center;
   align-items: center;
   color: #8181a5;
+  background-color: white;
+  cursor: pointer;
+  border: none;
 }
 body .layout .quickbook .container .two .block3 div {
   width: 91px;
@@ -655,9 +685,14 @@ body .layout .quickbook .container .two .block3 div {
   min-width: -moz-fit-content;
   min-width: fit-content;
   width: 91px;
+  font-family: Hanken Grotesk;
+  font-weight: 500;
+  font-size: 13.96px;
+  line-height: 100%;
+  letter-spacing: 0px;
+  text-align: center;
   height: 18px;
-  top: 14.03px;
-  left: 119.39px;
+  color: #8181a5;
 }
 body .layout .quickbook .container .three {
   cursor: pointer;
@@ -689,59 +724,64 @@ body .layout .quickbook .container .three div {
   text-align: center;
 }
 body .layout .quickbook .container .four {
-  border: 2px solid black;
   width: 341px;
   height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 body .layout .quickbook .container .four .left {
-  width: 15px;
-  background: #e7e7ee;
   width: 24px;
   height: 24px;
-  position: relative;
-  top: 16px;
+  position: absolute;
   left: 12px;
-  background-color: blue;
   border-radius: 4px;
-  border: none;
-  outline: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background: #e7e7ee;
+  display: grid;
+  place-items: center;
   cursor: pointer;
+  border: none;
 }
 body .layout .quickbook .container .four .left img {
-  width: 15px;
-  height: 15px;
+  margin: 0 auto;
 }
 body .layout .quickbook .container .four .title {
   width: 123px;
   height: 26px;
-  position: relative;
-  top: 16px;
-  left: 73px;
+  font-family: Hanken Grotesk;
+  font-weight: 700;
+  font-size: 16.7px;
+  line-height: 25.06px;
+  letter-spacing: 0px;
+  text-align: center;
 }
 body .layout .quickbook .container .four .right {
   width: 24px;
   height: 24px;
+  position: absolute;
+  right: 12px;
   border-radius: 4px;
-  cursor: pointer;
+  background: #e7e7ee;
+  display: grid;
+  place-items: center;
   transform: rotate(180deg);
+  cursor: pointer;
+  border: none;
 }
 body .layout .quickbook .container .four .right img {
-  width: 15px;
-  height: 15px;
+  margin: 0 auto;
 }
 body .layout .quickbook .container .five {
   width: 341px;
   height: 1078px;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  padding-bottom: 24px;
 }
 body .layout .quickbook .container .five .title {
   width: 341px;
   height: 24px;
+  margin-bottom: 24px;
 }
 body .layout .quickbook .container .five .details {
   width: 341px;
@@ -749,17 +789,25 @@ body .layout .quickbook .container .five .details {
   display: flex;
   flex-direction: column;
   gap: 18px;
+  background-color: white;
+}
+body .layout .quickbook .container .five .details .radio {
+  width: 341px;
+  height: 24px;
+}
+body .layout .quickbook .container .five .details .one {
+  border-top: 1px solid #ececf2;
 }
 body .layout .quickbook .container .five .details .data {
-  color: #8181a5;
   width: 341px;
   height: 59px;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  border-bottom: 1px solid #ececf2;
 }
 body .layout .quickbook .container .five .details .data .label {
   font-family: Hanken Grotesk;
+  color: #8181a5;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
@@ -775,20 +823,210 @@ body .layout .quickbook .container .five .details .data .input {
   color: #8181a5;
   letter-spacing: 0px;
 }
+body .layout .quickbook .container .five .details .data .input::-moz-placeholder {
+  color: #8181a5;
+}
+body .layout .quickbook .container .five .details .data .input::placeholder {
+  color: #8181a5;
+}
 body .layout .quickbook .container .six {
-  border: 2px solid black;
   width: 341px;
   height: 226px;
+  display: flex;
+  flex-direction: column;
   gap: 24px;
+}
+body .layout .quickbook .container .six .title {
+  width: 341px;
+  height: 24px;
+}
+body .layout .quickbook .container .six .options {
+  width: 341px;
+  height: 178px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+body .layout .quickbook .container .six .options .radio .item {
+  width: 341px;
+  height: 21px;
+  font-family: Hanken Grotesk;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0px;
+  color: #8181a5;
+}
+body .layout .quickbook .container .six .options .radio .buttons {
+  width: 341px;
+  height: 24px;
+  display: flex;
+  gap: 18px;
+}
+body .layout .quickbook .container .six .options .radio .buttons .label {
+  width: 110px;
+  height: 24px;
+  gap: 8px;
+}
+body .layout .quickbook .container .six .options .description {
+  width: 341px;
+  height: 98px;
+  gap: 12px;
+}
+body .layout .quickbook .container .six .options .description .title {
+  width: 341px;
+  height: 25px;
+  font-family: Hanken Grotesk;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0px;
+}
+body .layout .quickbook .container .six .options .description .input {
+  width: 341px;
+  height: 60px;
+  gap: 4px;
+  outline: none;
+  border: none;
+  padding: 0;
+}
+body .layout .quickbook .container .six .options .description .input::-moz-placeholder {
+  height: 100%;
+  font-family: Hanken Grotesk;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0px;
+}
+body .layout .quickbook .container .six .options .description .input::placeholder {
+  height: 100%;
+  font-family: Hanken Grotesk;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0px;
 }
 body .layout .quickbook .container .seven {
   width: 341px;
   height: 56px;
-  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body .layout .quickbook .container .seven .left {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: 12px;
+  border-radius: 4px;
+  background: #e7e7ee;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  border: none;
+}
+body .layout .quickbook .container .seven .left img {
+  margin: 0 auto;
+}
+body .layout .quickbook .container .seven .centre {
+  width: 20px;
+  height: 8px;
+  position: relative;
+  display: flex;
+}
+body .layout .quickbook .container .seven .centre .one {
+  border: none;
+  height: 8px;
+  width: 8px;
+  border-radius: 100%;
+  background-color: #f0ecfd;
+}
+body .layout .quickbook .container .seven .centre .two {
+  border: none;
+  height: 8px;
+  width: 8px;
+  border-radius: 100%;
+  background-color: #f0ecfd;
+}
+body .layout .quickbook .container .seven .centre .active {
+  background: #603ae5;
+}
+body .layout .quickbook .container .seven .right {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 12px;
+  border-radius: 4px;
+  background: #e7e7ee;
+  display: grid;
+  place-items: center;
+  transform: rotate(180deg);
+  cursor: pointer;
+  border: none;
+}
+body .layout .quickbook .container .seven .right img {
+  margin: 0 auto;
 }
 body .layout .quickbook .container .eight {
-  border: 2px solid black;
   width: 341px;
   height: 104px;
+  display: flex;
+  flex-direction: column;
   gap: 12px;
+}
+body .layout .quickbook .container .eight .save {
+  cursor: pointer;
+  width: 341px;
+  height: 46px;
+  border: none;
+  outline: none;
+  padding: 0;
+}
+body .layout .quickbook .container .eight .save div {
+  background: rgba(96, 58, 229, 0.1019607843);
+  width: 341px;
+  height: 46px;
+  border-radius: 8px;
+  border: none;
+  font-family: Hanken Grotesk;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0px;
+  text-align: center;
+  color: #603ae5;
+}
+body .layout .quickbook .container .eight div {
+  width: 341px;
+  height: 46px;
+  border: 2px solid black;
+  text-align: center;
+  border-radius: 8px;
+  background: #603ae5;
+  display: grid;
+  place-items: center;
+}
+body .layout .quickbook .container .eight div .options {
+  color: white;
+  background: #603ae5;
+  outline: none;
+  border: none;
+}
+body .layout .chat {
+  border: 2px solid black;
+  width: 56px;
+  height: 56px;
+  position: absolute;
+  top: 938px;
+  left: 1544px;
+  gap: 10px;
+  border-radius: 8px;
+  padding: 12px;
+  cursor: pointer;
+  background: #9c85ed;
+  border: none;
+}
+body .layout .chat img {
+  width: 28px;
+  height: 28px;
 }/*# sourceMappingURL=styles.css.map */
